# libr

./: .gitignore  AUTHORS  COPYING.debian  ChangeLog  ChangeLog.debian  Makefile  Makefile.am  Makefile.in  README  README.md  TRASH  TRASH.libr-gtk  build-deb.sh  build-elfres.sh  config.h.in  config.status  configure  configure.ac  configure~  libr.pc.in
debian/: README.Debian  autoreconf.after  autoreconf.before  changelog  control  debhelper-build-stamp  files  gnome-elf-thumbnailer.dirs  gnome-elf-thumbnailer.install  gnome-elf-thumbnailer.substvars  libr-dev.install  libr0.substvars  rules  rules.backup
doc/: libr.cfg
m4/: ChangeLog
man/: Makefile  Makefile.am  Makefile.in
po/: ChangeLog  Makefile  Makefile.in
src/: Makefile  Makefile.am  Makefile.in  cvtendian.h  libr-backends.h  libr-bfd.c  libr-bfd.h  libr-elf.c  libr-elf.h  libr-gtk.c  libr-gtk.h  libr-i18n.c  libr-i18n.h  libr-icons.c  libr-icons.h  libr-internal.h  libr-link.h  libr-ro.c  libr-ro.h  libr.c  libr.h  onecanvas.c  onecanvas.h  tempfiles.c  tempfiles.h
sub/: conftest.Po
